Simplifications of server API.  Added content types
to model api.  Added CallToolRequest/CallToolResult types to client api.